// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`analyzes board by kind 1`] = `undefined`;

exports[`analyzes board by kind 2`] = `
{
  "payload": {
    "orientation": "landscape",
    "positions": [
      {
        "x": 0,
        "y": 1,
      },
      {
        "x": 0,
        "y": 2,
      },
      {
        "x": 0,
        "y": 3,
      },
    ],
  },
  "reason": "three-or-more-identical-sequential-cells",
}
`;

exports[`analyzes board by kind 3`] = `
{
  "payload": {
    "orientation": "landscape",
    "positions": [
      {
        "x": 0,
        "y": 1,
      },
    ],
  },
  "reason": "next-cell-after-two-identical",
}
`;

exports[`analyzes board by kind 4`] = `undefined`;

exports[`analyzes board by kind 5`] = `
{
  "payload": {
    "orientation": "landscape",
    "positions": [
      {
        "x": 0,
        "y": 3,
      },
      {
        "x": 0,
        "y": 4,
      },
      {
        "x": 0,
        "y": 5,
      },
    ],
  },
  "reason": "three-or-more-identical-sequential-cells",
}
`;

exports[`analyzes board by kind 6`] = `
{
  "payload": {
    "orientation": "portrait",
    "positions": [
      {
        "x": 4,
        "y": 0,
      },
    ],
  },
  "reason": "next-cell-after-two-identical",
}
`;
